<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/Gray3"
    tools:context="app.stopwatch.MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >
        <TextView
            android:id="@+id/textViewTime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:freezesText="true"
            android:gravity="center"
            android:text="00:00,00"
            android:textColor="#ECEFF1"
            android:textSize="70sp"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="0.6">
        <Button
            android:id="@+id/buttonStart"
            android:text="@string/Start"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            android:onClick="onStartClick"
            android:background="@color/colorGreen"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginEnd="28dp"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/buttonLap"
            android:text="@string/Lap"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            android:background="@color/colorBrown"
            android:onClick="onLapClick"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.6"
        android:orientation="horizontal">
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <Button
                android:id="@+id/buttonReset"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:background="#9E9E9E"
                android:onClick="onResetClick"
                android:text="@string/Reset"
                android:textColor="#ECEFF1"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </RadioGroup>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:gravity="center">
            <Button
                android:id="@+id/buttonViewAllSaved"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:onClick="onViewSavedButton"
                android:textSize="12sp"
                android:textColor="#ECEFF1"
                android:background="@color/Gray2"
                android:textStyle="bold"
                android:text="@string/ViewSaved"/>
        </RadioGroup>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:gravity="center">
            <Button
                android:id="@+id/buttonSave"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:onClick="onSaveButton"
                android:textSize="12sp"
                android:textColor="#ECEFF1"
                android:background="@color/Gray2"
                android:textStyle="bold"
                android:text="@string/SaveThis"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:background="@color/Gray1"
        android:layout_height="300dp">
        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/linLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>
